# nowledge

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  build.rs  deny.toml
.github/: AGENTS.md  dependabot.yml
.github/workflows/: AGENTS.md  ci.yml
.omc/: project-memory.json
.omc/state/: agent-replay-3232aa67-06b7-40f3-8ea5-a75286f4e07a.jsonl  hud-stdin-cache.json  last-tool-error.json  subagent-tracking.json
doc/: AGENTS.md  README.md  api_manifest.json
doc/adr/: 0001-hardening-sequence.md  0002-principal-scope-and-diagnostics.md  0003-http-ingest-runtime-boundaries.md  0004-tenant-scope-v1.md  0005-durability-contract.md  0006-mutation-consistency.md  0007-durable-shared-mutation-audit.md  0007-operational-metrics.md  0008-durable-shared-mutation-audit.md
doc/api/: AGENTS.md  delete_v1_state_company_docs_source_id.md  get_healthz.md  get_livez.md  get_readyz.md  get_v1_admin_harness_components.md  get_v1_admin_harness_components_component_id.md  get_v1_admin_harness_evolution_changes.md  get_v1_admin_harness_evolution_changes_change_id.md  get_v1_admin_harness_evolution_changes_change_id_delta.md  get_v1_admin_history_user_event_indexes.md  get_v1_admin_metrics.md  get_v1_debug_traces_trace_id.md  (+78 more)
examples/: rag_stream.sh
src/: AGENTS.md  analysis.rs  analysis_service.rs  app.rs  audit_records_v1.rs  audit_records_v1_main.rs  audit_service.rs  auth.rs  company_docs_service.rs  config.rs  context_service.rs  error.rs  eval_service.rs  fragmenter.rs  harness_service.rs  health_service.rs  history_service.rs  http_boundary.rs  ingest_service.rs  lib.rs  llm.rs  llm_service.rs  main.rs  meili.rs  metrics.rs  models.rs  models_audit.rs  models_common.rs  models_company_docs.rs  models_context_rag_llm.rs  models_defaults.rs  models_harness_eval.rs  models_history.rs  models_ingest.rs  models_insights_links_analysis.rs  models_operations.rs  models_sessions.rs  models_state.rs  models_structured.rs  mutation.rs  (+46 more)
tests/: AGENTS.md  api_spec.rs  audit_records_v1_migration.rs  authz_characterization.rs  company_delete_consistency.rs  durability_characterization.rs  error_contract.rs  http_boundary_characterization.rs  http_trace_characterization.rs  ingest_admission_persistence.rs  insight_history.rs  meili_credential_separation.rs  meili_integration.rs  meili_pin_preflight.rs  mineru_integration.rs  module_boundaries.rs  mutation_consistency.rs  operations_v1_migration.rs  pagination_characterization.rs  parse_artifact_durability.rs  persistence_characterization.rs  rag_streaming.rs  request_validation_characterization.rs  route_manifest.rs
(+6 files in other folders)
